--- a/views/singletvshow.hbs
+++ b/views/singletvshow.hbs
@@ -69,7 +69,7 @@
   </nav>
   <!-- /breadcrumbs -->
   <div class="movie-buttons text-center CheackBtn">
-    <button type="button" class="btn btn-labeled btn-recommend">
+    <button type="button" id="recommend"class="btn btn-labeled btn-recommend">
       <span class="btn-label"><i class="fas fa-thumbs-up"></i></span> Recommend</button>
 
     <button type="button" id="watchlist" class="btn btn-labeled btn-watchlist">
