--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -43,13 +43,18 @@
         <div class="col-md-4 mb-3">
           <div class="card">
             <div class="card-body">
-              <div class="d-flex flex-column align-items-center text-center">
-                {{#if user.profile_img}}
-                <img src="{{user.profile_img}}" alt="User Profile" class="circle" width="150px" height="100px">
-                {{else}}
-                <img src="../avatar.png" alt="User Profile" class="circle" width="150px" height="150px">
-                {{/if}}
+              <div class="profile-pic">
+                <label class="-label" for="file">
+                  <span class="glyphicon glyphicon-camera"></span>
+                  <span>Change Image</span>
+                </label>
+                <form action="/send" id="myform" method="POST" enctype="multipart/form-data">
+                <input id="file" type="file" name="profileImg" accept="image/*" />
+                </form>
+                <img src="{{user.profile_img}}" id="output"
+                  width="200" />
               </div>
+
               <div class="mt-3">
                 <h4>{{user.name}}</h4>
                 <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -59,15 +64,14 @@
                 <button class="btn btn-outline-primary">Message</button>
               </div>
               <div class="mt-4">
-                <form action="/send" method="POST" enctype="multipart/form-data">
-                  <input type="file" name="profileImg" accept="image/*" />
-                  <input type="submit" class="btn btn-primary">
-                  </fofrm>
+                
+                  <input form="myform" type="submit" class="btn btn-primary">
+                 
               </div>
 
             </div>
           </div>
-          <div class="card mt-3">
+          <div class="card mt-3" id="Bio">
             <p class="text-center">
               Lorem ipsum dolor sit, amet consectetur
               adipisicing elit. Ipsum placeat sunt pariatur odio
@@ -82,11 +86,13 @@
               commodi exercitationem
               quo vel magnam ex ducimus. Quod, commodi cupiditate.
             </p>
-
+            <div class="mb-4"  align="center">
+            <Button type="button" class="btn btn-primary" onClick="Loadtext(event)">Change</Button>
+            </div>
           </div>
           <hr>
 
-         
+
 
         </div>
         <div class="col-md-8">
@@ -127,23 +133,19 @@
           <div class="col-sm-6 mb-3 row gutters-sm col-md-8">
             <div class="card h-100">
               <div class="card-body ">
-                <div class="row">
-                  <h6 class="d-flex align-items-center mb-3">Favorite Movies</h6>
-                  <div class="col-sm-3">
-                    <img class="card-img-top" style="width: 120px;"
-                      src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" alt="Card image cap" />
+                <h6 class="d-flex align-items-center mb-3">Favorite Movies</h6>
+                <div class="hey" id="row">
+                  <div class="image">
+                    <img src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" style="width: 120px;" />
                   </div>
-                  <div class="col-sm-3">
-                    <img class="card-img-top" style="width: 120px;"
-                      src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" alt="Card image cap" />
+                  <div class="image">
+                    <img src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" style="width: 120px;" />
                   </div>
-                  <div class="col-sm-3">
-                    <img class="card-img-top" style="width: 120px;"
-                      src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" alt="Card image cap" />
+                  <div class="image">
+                    <img src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" style="width: 120px;" />
                   </div>
-                  <div class="col-sm-3">
-                    <img class="card-img-top" style="width: 120px;"
-                      src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" alt="Card image cap" />
+                  <div class="image">
+                    <img src="https://image.tmdb.org/t/p/w300/h9p1zxKzti35Aqe6xpwkP9NlG7p.jpg" style="width: 120px;" />
                   </div>
                 </div>
               </div>
