Delete option on watchlist, started on a email verifaction and fixed up missing links

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -73,7 +73,13 @@
           {{/if}}
 
         </ul>
+        {{#if user}}
+          <div class="profile-pic">
+            <img src="{{user.profile_img}}" id="output" width="200" ></img>
+          </div>
+        {{else}}
 
+        {{/if}}
       </div>
     </nav>
 
