--- a/views/singletvshow.hbs
+++ b/views/singletvshow.hbs
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="img/favicon.png">
 
-  <title>Single Movie - Get Booked Online</title>
+  <title>Single Movie</title>
   <link rel="stylesheet" href="../css/main.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
@@ -24,7 +24,7 @@
 <body>
 
   <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/index"><img src="img/logo.png" /></a>
+    <a class="navbar-brand" href="/"><img src=".\logo.png" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
         class="fas fa-bars"></i>
@@ -33,7 +33,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/index"><i class="fas fa-home"></i> Home</a>
+          <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/movies"><i class="fas fa-film"></i> Movies</a>
@@ -43,12 +43,13 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
             aria-expanded="false"><i class="fas fa-crown"></i> Genre</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Adventure</a>
-            <a class="dropdown-item" href="#">Horror</a>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Animation</a>
-            <a class="dropdown-item" href="#">Comedy</a>
-            <a class="dropdown-item" href="#">Fantasy</a>
+            <a class="dropdown-item" href="#">G</a>
+            <a class="dropdown-item" href="#">O</a>
+            <a class="dropdown-item" href="#">A</a>
+            <a class="dropdown-item" href="#">W</a>
+            <a class="dropdown-item" href="#">A</a>
+            <a class="dropdown-item" href="#">Y</a>
+
           </div>
         </li>
       </ul>
