--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,22 @@ nav {
 .tag:hover {
   color: #fb32b9;
 }
+.profile-pic {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+  transition: all 0.3s ease;
+}
+.profile-pic img {
+  position: absolute;
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.35);
+  border-radius: 100px;
+  z-index: 0;
+}
 
 .nav-item a i {
   margin-right: 5px;
@@ -405,7 +421,9 @@ nav .breadcrumb {
 .movie-header img {
   width: 100%;
 }
-
+.Delete-btn:hover {
+  color: #df0000;
+}
 .movie-header .movie-header-image:after {
   display: block;
   content: "";
@@ -981,6 +999,12 @@ ul.tvseasons {
   line-height: 30px;
 }
 
+.verify {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
 div#letstalk {
   padding: 15px 60px;
   background: transparent;
