--- a/views/singletvshow.hbs
+++ b/views/singletvshow.hbs
@@ -64,8 +64,7 @@
       </ul>
 
       <a class="nav-button" href="/movies"><i class="fas fa-newspaper"></i> Latest Movies</a>
-      </li>
-      </ul>
+        </ul>
 
     </div>
   </nav>
@@ -142,11 +141,13 @@
 
 
     <div class="suggestions" id="suggestions">
+        <div class="row d-flex flex-wrap " >
+            <div class="row d-flex flex-wrap" id="Recommendeded">
 
+            </div>
+        </div>
     </div>
   </div>
-
-
 
 
   <!-- Footer -->
