--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,8 +167,17 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  transition: all 0.3s ease;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 }
+
+@media (max-width: 768px) {
+  .profile-pic img{
+   display: none;
+  }
+}
+
 .profile-pic input {
   display: none;
 }
