--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,109 +1,115 @@
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
 
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
+<nav class="navbar navbar-expand-md">
+    <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
+    <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    ><i class="fas fa-bars"></i>
+    </button>
+
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+            </li>
 
-        {{#if user}}
-          <li class="nav-item">
-            <a class="nav-link" href="/movies">Movies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
-          </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/register">Register</a>
+            </li>
 
-          <li class="nav-item active">
-            <a class="nav-link" href="/auth/logout">Logout</a>
-          </li>
-        {{else}}
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link" href="/Register">Register</a>
-          </li>
-        {{/if}}
-
-      </ul>
+        </ul>
 
     </div>
+</nav>
 
-    <div class="container mt-4">
-      <div class="card">
-        <div class="card-header">
-          Register Form
+<div class="container loginContainer">
+    <div class="row  ">
+        <div class="col-sm-8 ">
+            <img src="../oleg-demakov-NIIlEEIORu0-unsplash.jpg" width="700px" height="800px" alt=""/>
+        </div>
+        <div class="col-sm-3 login-form1">
+            <div class="Welcometext">
+                <p>Welcome</p>
+                <h1>
+                    Create a new account
+                </h1>
+            </div>
+
+
+
+            <form action="/auth/register" method="post">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" name="name" />
+                    <label class="label" for="email">Email</label>
+                    <input
+                            type="email"
+                            class="form-control"
+                            id="email"
+                            name="email"
+                    />
+
+
+                    <label class="label" for="password">Password</label>
+                    <input
+                            type="password"
+                            class="form-control"
+                            id="password"
+                            name="password"
+                    />
+
+                    <label for="password">Confirm Password</label>
+                    <label for="passwordConfirm"></label><input
+                            type="password"
+                            class="form-control"
+                            id="passwordConfirm"
+                            name="passwordConfirm"
+                    />
+
+                    <div class="d-flex justify-content-center login_container">
+                        <button type="submit" class=" btn btn-primary login_btn">Register</button>
+                    </div>
+                </div>
+            </form>
+
+            {{#if message}}
+                <h4 class="alert alert-primary mt-4">{{message}}</h4>
+            {{/if}}
+            <div class="card-text">
+                <p>Already have an account? <a href="/login">Login here</a></p>
+            </div>
         </div>
 
-        <div class="card-body">
-          <form action="/auth/register" method="post">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" id="name" name="name" />
-
-            </div>
-
-            <div class="form-group">
-              <label for="email">Email Address</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-              />
-            </div>
-
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-              />
-            </div>
-
-            <div class="form-group">
-              <label for="password">Confirm Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="passwordConfirm"
-                name="passwordConfirm"
-              />
-            </div>
-
-            <button type="submit" class="btn btn-primary">Sign up</button>
-
-          </form>
-        </div>
-
-      </div>
-      {{#if message}}
-        <h4 class="alert alert-danger mt-4">{{message}}</h4>
-      {{/if}}
     </div>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
