--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,9 +57,8 @@
 
       </ul>
       {{#if user}}
-      <div class="profile-pic">
-
-        <img src="{{user.profile_img}}" id="profile-output" width="200"></img>
+      <div class="profile-pic rounded-img-preAn">
+          <img src="{{user.profile_img}}" id="profile-output" width="200"/>
       </div>
       {{else}}
 
@@ -181,7 +180,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-img rounded-circle" src="../circle-1.jpg" alt="" />
+            <img class="img-fluid rounded-img-preAn rounded-img rounded-circle" src="../circle-1.jpg" alt="" />
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -203,7 +202,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid rounded-img rounded-circle" src="../circle-2.jpg" alt="" />
+            <img class="img-fluid rounded-img-preAn rounded-img rounded-circle" src="../circle-2.jpg" alt="" />
           </div>
         </div>
         <div class="col-lg-6">
@@ -226,7 +225,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-img rounded-circle" src="../circle-3.jpg" alt="" />
+            <img class="img-fluid rounded-img-preAn  rounded-img rounded-circle" src="../circle-3.jpg" alt="" />
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -338,7 +337,6 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="profile.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
