--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,9 @@ body {
 }
 
 .login-form1 {
-  margin-top: 8.5rem;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .label {
@@ -144,6 +146,7 @@ body {
 .Welcometext {
   margin-bottom: 2rem;
   font-family: "Roboto", sans-serif bold;
+  text-align: center;
 }
 
 .hey {
@@ -173,8 +176,8 @@ body {
 }
 
 @media (max-width: 768px) {
-  .profile-pic img{
-   display: none;
+  .profile-pic img {
+    display: none;
   }
 }
 
@@ -210,4 +213,20 @@ body {
   display: inline-flex;
   padding: 0.2em;
   height: 2em;
+}
+
+.img-responsive {
+  width: 90%;
+  height: 90%;
+  margin: auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .img-responsive {
+    width: 100%;
+    height: 90%;
+    margin: auto;
+    display: block;
+  }
 }
