--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -91,7 +91,6 @@
     
       </div>
     </nav>
-    <!-- breadcrumbs -->
   <div class="breadcrumb-nav-list" aria-label="breadcrumb">
     <ol class="breadcrumb-nav">
       <li class="breadcrumb-item"><a href="/index">Home</a></li>
@@ -99,50 +98,26 @@
       <li class="breadcrumb-item active" aria-current="page"><span id="currentPage"></span></li>
     </ol>
   </div>
-    <!-- /breadcrumbs -->
-    <!-- movie cards -->
     <div class="container">
       <div class="alert alert-primary" role="alert">
-        <i class="fas fa-exclamation-circle"></i> Have fun! Dont be here for too long tho!
+          {{#if message}}
+              <i class="fas fa-exclamation-circle"></i> {{message}}
+          {{else}}
+              <i class="fas fa-exclamation-circle"></i> Have fun! Don't be here for too long tho!
+          {{/if}}
       </div>
       <main id ="main" class="row">
-  
 
-          
        </main>
-       <!-- The overlay -->
-<div id="myNav" class="overlay">
-
-  <!-- Button to close the overlay navigation -->
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-
-  <!-- Overlay content -->
-  <div class="overlay-content" id="overlay-content">
-    <a href="javascript:void(0)" class="arrow left-arrow" id="left-arrow">&#8656;</a> 
-        
-        <a href="javascript:void(0)" class="arrow right-arrow" id="right-arrow" >&#8658;</a>
-
-  </div>
-
 </div>
-</div>
-<!-- Use any element to open/show the overlay navigation menu -->
 <span onclick="openNav()"></span>
-    <!-- /movie cards -->
     <br />
     
-     <!-- /Pagination-->
      <div class="pagination">
       <div class="page" id="prev">Previous Page</div>
       <div class="current" id="current">1</div>
       <div class="page" id="next">Next Page</div>
-
   </div>
-     <!-- /Pagination-->
-    <!-- Newsletter -->
-
-    <!-- /Newsletter -->
-    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -190,11 +165,7 @@
         </div>
       </div>
     </footer>
-    <!-- /Footer -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
