--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md">
-
+    <a class="navbar-brand" href="/"><img src="../logo.png"  alt="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
         class="fas fa-bars"></i>
@@ -116,13 +116,6 @@
       Your email address
     </a>
 
-
-
-
-
-
-
-
   </div>
   {{else}}
 
@@ -137,7 +130,7 @@
             <div class="features-icons-icon d-flex">
               <i class="fab fa-freebsd m-auto main-icons"></i>
             </div>
-            <h3>Free with no ads</h3>
+            <h3>Free with Almost no ads</h3>
             <p class="lead mb-0">
               You won't find
               <span class="fancy-underline">a better deal</span>
@@ -180,7 +173,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-img-preAn rounded-img rounded-circle" src="../circle-1.jpg" alt="" />
+            <img class="img-fluid rounded-img-preAn_right rounded-img rounded-circle" src="../circle-1.jpg" alt="" />
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -225,7 +218,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-img-preAn  rounded-img rounded-circle" src="../circle-3.jpg" alt="" />
+            <img class="img-fluid rounded-img-preAn_right  rounded-img rounded-circle" src="../circle-3.jpg" alt="" />
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -258,25 +251,16 @@
   <section class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-6">
+        <div class="col-md-4 col-sm-6">
           <a href="#">
             <img class="img-fluid d-block mx-auto" src="../universal.png" alt="Sponsor 1" />
           </a>
         </div>
         <div class="col-md-3 col-sm-6">
-          <a href="#">
             <img class="img-fluid d-block mx-auto" src="../warner.png" alt="Sponsor 2" />
-          </a>
         </div>
         <div class="col-md-3 col-sm-6">
-          <a href="#">
             <img class="img-fluid d-block mx-auto" src="../disney.png" alt="Sponsor 3" />
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="../byalk.png" alt="Sponsor Myself" />
-          </a>
         </div>
       </div>
     </div>
@@ -314,7 +298,7 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="https://linkedin.com/in/byalk" class="footer-fb">
+              <a href="#" class="footer-fb">
                 <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
             </li>
