--- a/views/singlemovie.hbs
+++ b/views/singlemovie.hbs
@@ -33,13 +33,14 @@
 <body>
 
 <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src=".\logo.png"/></a>
+    <a class="navbar-brand" href="/"><img src="../logo.png"  alt="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
             class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
@@ -155,7 +156,7 @@
             <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item mr-3">
-                        <a href="https://linkedin.com/in/byalk" class="footer-fb">
+                        <a href="#" class="footer-fb">
                             <i class="fab fa-linkedin fa-2x fa-fw"></i>
                         </a>
                     </li>
