--- a/views/tvshow.hbs
+++ b/views/tvshow.hbs
@@ -22,7 +22,7 @@
 <body>
 <!-- breadcrumbs -->
 <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
+  <a class="navbar-brand" href="/"><img src="../logo.png"  alt="logo" /></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
             aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,13 +48,21 @@
                     <i class="fas fa-crown"></i>
                     Genre</a>
 
-                <div id="tags" class="dropdown-menu">
-                    <a class="tag" href="#">Adventure</a>
-                    <a class="tag" href="#">Horror</a>
-                    <a class="tag" href="#">Animation</a>
-                    <a class="tag" href="#">Comedy</a>
-                    <a class="tag" href="#">Fantasy</a>
-                </div>
+                <div class="dropdown-menu">
+            <div class="dropdown_container">
+            <div class="dropdown_header">
+              <span>Genres</span>
+              <button id="clear" class="btn btn-sm">Clear</button>
+            </div>
+            <div id="tags"> 
+            <a class="tag" href="#">Adventure</a>
+            <a class="tag" href="#">Horror</a>
+            <a class="tag" href="#">Animation</a>
+            <a class="tag" href="#">Comedy</a>
+            <a class="tag" href="#">Fantasy</a>
+            </div>
+           </div>
+          </div>
             </li>
             <li class="nav-item active">
                 <a class="nav-link"
@@ -140,7 +148,7 @@
             <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item mr-3">
-                        <a href="https://linkedin.com/in/byalk" class="footer-fb">
+                        <a href="#" class="footer-fb">
                             <i class="fab fa-linkedin fa-2x fa-fw"></i>
                         </a>
                     </li>
