--- a/views/Watchlist.hbs
+++ b/views/Watchlist.hbs
@@ -21,7 +21,6 @@
 <body>
   <nav class="navbar navbar-expand-md">
     <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars"></i>
@@ -61,14 +60,6 @@
             <i class="fas fa-download"></i>Download</a>
         </li>
       </ul>
-
-      <header>
-        <form id="form">
-          <input type="text" placeholder="Search" id="search" class="search">
-        </form>
-      </header>
-
-
     </div>
   </nav>
 </body>
@@ -77,8 +68,8 @@
 </nav><!-- breadcrumbs -->
   <div class="breadcrumb-nav-list" aria-label="breadcrumb">
     <ol class="breadcrumb-nav">
-      <li class="breadcrumb-item"><a href="/profile">Movie</a></li>
-      <li class="breadcrumb-item"><a href="/watchlist">Tv show</a></li>
+      <li class="breadcrumb-item"><a href="/profile">Profile</a></li>
+      <li class="breadcrumb-item"><a href="/watchlist">Watchlist</a></li>
     </ol>
   </div><!-- /breadcrumbs -->
 <!-- movie cards -->
@@ -124,7 +115,7 @@
       <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
-            <a href="https://linkedin.com/in/byalk" class="footer-fb">
+            <a href="#" class="footer-fb">
               <i class="fab fa-linkedin fa-2x fa-fw"></i>
             </a>
           </li>
