--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,19 +7,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/main.css" />
 
   <title>Document</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
         class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <a class="navbar-brand" href="/"><img src="../logo.png" /></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
@@ -38,10 +39,7 @@
   </nav>
 
   <div class="container loginContainer">
-    <div class="row  ">
-      <div class="col-sm-8 ">
-        <img src="../oleg-demakov-NIIlEEIORu0-unsplash.jpg" class="img-responsive" alt="" />
-      </div>
+   
       <div class="col-sm-3 login-form1">
         <div class="Welcometext">
           <p>Welcome back</p>
@@ -49,18 +47,10 @@
             Login to your account
           </h1>
         </div>
-
-
-
         <form action="/auth/login" method="post">
-          <div class="form-group">
-            <label class="label" for="email">Email</label>
-            <input type="email" class="form-control test" id="email" name="email" />
-
-
-            <label class="label" for="password">Password</label>
-            <input type="password" class="form-control test" id="password" name="password" />
-
+          <div class="formInputs">
+            <input type="email" class="form-control " placeholder="Email" id="email" name="email" />
+            <input type="password" class="form-control " placeholder="Password" id="password" name="password" />
             <div class="d-flex justify-content-center login_container">
               <button type="submit" class=" btn btn-primary login_btn">Login</button>
             </div>
@@ -77,7 +67,6 @@
         </div>
       </div>
 
-    </div>
   </div>
 
   </div>
