--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -20,6 +20,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <a class="navbar-brand" href="/"><img src="../logo.png" alt="logo" /></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
@@ -64,20 +65,9 @@
                 <p class="text-secondary mb-1">Full Stack Developer</p>
                 <p class="text-muted font-size-sm">Bay Area, San Francisco,
                   CA</p>
-                <button class="btn btn-primary">Follow</button>
-                <button class="btn btn-outline-primary">Message</button>
               </div>
             </div>
           </div>
-          <div class="card mt-3" id="Bio">
-            <h1 class="card-title mb-1 text-center text-muted">Create a Room</h1>
-            <div class="mb-4 mt-5" align="center">
-              <Button type="button" class="btn btn-secondary" id="roomBtn" href="#">Create</Button>
-            </div>
-          </div>
-
-
-
         </div>
         <div class="col-md-8">
           <div class="card mb-3 rounded-img ">
@@ -146,7 +136,6 @@
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
   <script src="profile.js"></script>
-  <script src="indexScript.js"></script>
 </body>
 
 </html>
