--- a/views/singletvshow.hbs
+++ b/views/singletvshow.hbs
@@ -33,7 +33,7 @@
 <body>
 
   <nav class="navbar navbar-expand-md">
-    <a class="navbar-brand" href="/"><img src=".\logo.png" /></a>
+    <a class="navbar-brand" href="/"><img src="../logo.png"  alt="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"><i
         class="fas fa-bars"></i>
@@ -104,7 +104,6 @@
 
             </div>
           </div>
-
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -114,27 +113,10 @@
 
             </div>
           </div>
-
-          
-
-            <!--
-    Dropdown menu, show/hide based on menu state.
-
-    Entering: "transition ease-out duration-100"
-      From: "transform opacity-0 scale-95"
-      To: "transform opacity-100 scale-100"
-    Leaving: "transition ease-in duration-75"
-      From: "transform opacity-100 scale-100"
-      To: "transform opacity-0 scale-95"
-  -->
-          
         </section>
-
-
-
       </li>
-
     </ul>
+
 
     <div class="player">
       <div class="embed-responsive embed-responsive-16by9"> <iframe id="tvshow" src="javascript:void(0)" class="embed"
@@ -193,7 +175,7 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="https://linkedin.com/in/byalk" class="footer-fb">
+              <a href="#" class="footer-fb">
                 <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
             </li>
