--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -101,7 +101,7 @@
     </nav>
   <div class="breadcrumb-nav-list" aria-label="breadcrumb">
     <ol class="breadcrumb-nav">
-      <li class="breadcrumb-item"><a href="/home">Home</a></li>
+      <li class="breadcrumb-item"><a href="/">Home</a></li>
       <li class="breadcrumb-item"><a href="/movies">movies</a></li>
       <li class="breadcrumb-item active" aria-current="page"><span id="currentPage"></span></li>
     </ol>
