--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -95,7 +95,7 @@
                   <h6 class="mb-0">Joined</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
-                  {{user.Joined}}
+                  {{user.joined}}
                 </div>
               </div>
               <hr />
