profile img promisify fixed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,7 @@
       </ul>
       {{#if user}}
       <div class="profile-pic rounded-img-preAn">
-          <img src="{{user.profile_img}}" id="profile-output" width="200"/>
+          <img src="" id="profile-output" width="200"/>
       </div>
       {{else}}
 
